kubernetes/scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-app
  template:
    metadata:
      labels:
        app: scraper-app
    spec:
      containers:
      - name: scraper-container        
        image: registry.digitalocean.com/heikkiregistry/app:clean-start
        ports:
        - containerPort: 5001
