kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-container
        image: registry.digitalocean.com/heikkiregistry/app:clean-start-2
        ports:
        - containerPort: 80 # Nginx default port is 80
