kubernetes/scraper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper-service
spec:
  selector:
    app: scraper-app
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
